Fixed knob alignment

--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -408,7 +408,7 @@ label.tnt-components:has(input[type=checkbox]) {
             height: 0.75rem;
             width: 0.75rem;
             left: 0.3rem;
-            top: 0.45rem;
+            top: 0.5rem;
             border-radius: 50%;
             background-color: var(--unchecked-knob-color);
         }
